# big-data-pipeline

./: Dockerfile  characters.py  constants.py  db.py  docker-compose.yml  extract.py  load.py  main.py  makefile  pyproject.toml  rick.csv  sql-command.md  sql.md  steps.txt  utils.py
archives/: rickandmorty.py
archives/notebook/: rickandmorty.ipynb
notebook/: rickandmorty.ipynb
